# solidity-deploy-rs

./: Cargo.toml  README.md  build.rs
contracts/: MessageStorage.sol
server/: main.rs
src/: cli_config.rs  main.rs
